--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,9 @@
     "development": {
       "presets": ["react-hmre"]
     }
-  }
+  },
+  "plugins": [
+    ["transform-class-properties", { "spec": true }]
+  ]
 }
+
